--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav a:hover{
     background-color: #fff;
     transition: 0.2s;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
+    border-radius: 3px;
 }
 
 .img-bg a{
